navbar css fixed no more height flicker

--- a/app/static/css/myStyle.css
+++ b/app/static/css/myStyle.css
@@ -41,7 +41,7 @@ body {
 }
 .closed{
     background:lightgrey;
-    padding-bottom: 40px;
+    height:100px;
     -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
     transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
 }
